--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tom Black</title>
     
-    <link href='https://fonts.googleapis.com/css?family=Merriweather+Sans|Merriweather' rel='stylesheet'>
+    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans|Merriweather" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
+    <link rel="apple-touch-icon-precomposed" href="/img/favicon-152.png">
   </head>
   
   <body>
