--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tom Black</title>
     
-    <link href="https://fonts.googleapis.com/css?family=Merriweather+Sans|Merriweather" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Lusitana:400,700" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <link rel="apple-touch-icon-precomposed" href="/img/favicon-152.png">
   </head>
   
-  <body>
+  <body class="{{ page.css }}">
     {{ content }}
     <!-- <script src="js/scripts.js"></script> -->
   </body>
