--- a/main.scss
+++ b/main.scss
@@ -2,32 +2,48 @@
 ---
 
 $blue: #0074d9;
-$brown: #644702;
+$brown: #4a3001;
 $light-brown: #e6dfd2;
 
 body {
   margin: 0 auto;
-  padding: 20px 10px 20px 10px;
-  max-width: 600px;
-  background: #f7f3eb;
-  text-align: center;
-  line-height: 1.4em;
-  font-family: 'Merriweather', serif;
+  padding: 20px 10px 50px 10px;
+  max-width: 800px;
+  background: #faf6ec;
+  font-size: 18px;
+  font-family: 'Lusitana', serif;
   color: $brown;
   // border: 1px solid blue;
 }
 
+.home {
+  text-align: center;
+  
+  ul {
+    padding: 0;
+    list-style: none;
+  }
+}
+
+h1, h2, h3 {
+  margin-bottom: 0.50em;
+}
+
 h1 {
-  margin-bottom: 1em;
+  font-size: 36px;
 }
 
 h2 {
-  margin-top: 1.5em;
-  margin-bottom: 0;
+  font-size: 28px;
 }
 
 h3 {
   font-weight: normal;
+  font-size: 20px;
+}
+
+p {
+  line-height: 1.4em;
 }
 
 a {
@@ -35,10 +51,7 @@ a {
 }
 
 ul {
-  margin: 1em 0;
-  margin-bottom: 2em;
-  padding: 0;
-  list-style: none;
+  margin-bottom: 1.5em;
   
   li {
     margin-bottom: 0.7em;
@@ -59,4 +72,12 @@ hr {
 .bio {
   margin-bottom: 1.5em;
   line-height: 1.7em;
+}
+
+a.back {
+  text-decoration: none;
+  
+  &:hover {
+    text-decoration: underline;
+  }
 }
