--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tom Black</title>
+    <title>Tom Black{%if page.title %} – {{ page.title }}{% endif %}</title>
     
     <link href="https://fonts.googleapis.com/css?family=Lusitana:400,700" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
@@ -13,6 +13,5 @@
   
   <body class="{{ page.css }}">
     {{ content }}
-    <!-- <script src="js/scripts.js"></script> -->
   </body>
 </html>
