Content updates and Tachyons!

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,14 +4,14 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tom Black{%if page.title %} – {{ page.title }}{% endif %}</title>
+    <title>Tom Black{%if page.title %} — {{ page.title }}{% endif %}</title>
     
     <link href="https://fonts.googleapis.com/css?family=Lusitana:400,700" rel="stylesheet">
     <link rel="stylesheet" href="main.css">
     <link rel="apple-touch-icon-precomposed" href="/img/favicon-152.png">
   </head>
   
-  <body class="{{ page.css }}">
+  <body class="{{ page.css }} mw7 pa3 center sans-serif mb5">
     {{ content }}
   </body>
 
