--- a/main.scss
+++ b/main.scss
@@ -1,130 +1,60 @@
 ---
 ---
 
-$blue: #0074d9;
-$brown: #4a3001;
-$light-brown: #e6dfd2;
+@import "tachyons";
 
 body {
-  margin: 0 auto;
-  padding: 10px 10px 50px 10px;
-  max-width: 800px;
-  background: #faf6ec;
-  font-size: 18px;
-  font-family: 'Lusitana', serif;
-  color: $brown;
+  @extend .black-80;
 }
 
-h1, h2, h3 {
-  margin-bottom: 0.5em;
-}
-
-h1 {
-  font-size: 38px;
-}
-
-h2 {
-  margin-top: 1.0em;
-  font-size: 32px;
-}
-
-h3 {
-  font-weight: normal;
-  font-size: 24px;
-}
-
-p {
-  line-height: 1.4em;
+p, li, strong {
+  line-height: 1.4;
 }
 
 a {
-  color: $blue;
+  @extend .blue;
 }
 
-a.back {
-  text-decoration: none;
-  
-  &:hover {
-    text-decoration: underline;
-  }
+li {
+  @extend .pb2;
 }
 
-ul {
-  margin-top: 0.7em;
-  margin-bottom: 1.5em;
-  
-  li {
-    margin-bottom: 0.7em;
-  }
-}
-
-hr {
-  border: 1px solid $light-brown;
-}
-
-@media (max-width: 500px) {
-  p, ul {
-    font-size: 20px;
-  }
+.mt3r {
+  margin-top: 3rem;
 }
 
 .home {
-  text-align: center;
-  
-  h2 {
-    margin-top: 0.8em;
+  .section-header {
+    @extend .f3, .bb, .bw2, .pb2, .mb3;
   }
   
-  ul {
-    padding: 0;
-    list-style: none;
-    
-    li {
-      margin-bottom: 0.7em;
-      line-height: 1.4em;
+  .items {
+    h3 {
+      @extend .mt0, .mb1;
+      font-size: 1.15rem;
+      
+      a { @extend .link; }
     }
-  }
-  
-  .profile-pic {
-    margin-bottom: 10px;
-    width: 150px;
-    border-radius: 50%;
-    border: 5px solid #fff;
-    box-shadow: 0 0 4px $brown;
-  }
-  
-  li.mobile-separator {
-    display: none;
-    margin: 0;
-    line-height: 0.7em;
-    font-size: 30px;
-    color: $light-brown;
-    
-    @media (max-width: 500px) {
-      display: block;
-    }
+    p { @extend .mt0; }
   }
 }
 
-.gov {
+.work {
   img {
-    margin: 10px 20px 10px 0;
+    @extend .mb2;
     width: 125px;
-    float: left;
   }
   
-  .break {
-    height: 5px;
-  }
-  
-  @media (max-width: 450px) {
-    img {
-      margin: 0;
-      float: none;
-    }
-    
-    .break.collapse {
-      height: 0;
+  .project {
+    .col2 {
+      
+      p:first-child {
+        @extend .mt0;
+      }
+      
+      ul {
+        @extend .mb0;
+      }
     }
   }
 }
