--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -7,14 +7,14 @@
     <title>Tom Black{%if page.title %} — {{ page.title }}{% endif %}</title>
     
     <link href="https://fonts.googleapis.com/css?family=Lusitana:400,700" rel="stylesheet">
-    <link rel="stylesheet" href="main.css">
-    <link rel="apple-touch-icon-precomposed" href="/img/favicon-152.png">
+    <link rel="stylesheet" href="/assets/css/main.css">
+    <link rel="apple-touch-icon-precomposed" href="/assets/img/favicon-152.png">
   </head>
   
   <body class="{{ page.css }} mw7 pa3 center sans-serif mb5">
     {{ content }}
   </body>
-
+  
   <!-- Google Analytics -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
