--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -18,6 +18,12 @@ h3 { @extend .f4; }
 a { @extend .blue; }
 li { @extend .pb2; }
 
+hr {
+  @extend .bg-black-10;
+  border: none;
+  height: 3px;
+}
+
 .mt3r {
   margin-top: 3rem;
 }
@@ -26,12 +32,12 @@ li { @extend .pb2; }
   .section-header {
     @extend .f3, .bb, .bw2, .pb2, .mb3;
   }
-  
+
   .items {
     h3 {
       @extend .mt0, .mb1;
       font-size: 1.15rem;
-      
+
       a { @extend .f4, .link; }
     }
     p { @extend .mt0; }
@@ -43,14 +49,14 @@ li { @extend .pb2; }
     @extend .mt3, .mt2-ns, .mb3;
     width: 125px;
   }
-  
+
   .project {
     .col2 {
-      
+
       p:first-child {
         @extend .mt0;
       }
-      
+
       ul {
         @extend .mb0;
       }
@@ -75,26 +81,26 @@ article {
 code {
   @extend .pa1, .pb0, .ba, .bw1, .b--black-10, .br2;
   word-wrap: break-word;
-  background: rgba(0, 0, 0, 0.03);
+  background: rgba(0, 0, 0, 0.02);
 }
 
 pre {
   code {
     @extend .lh-copy, .db, .overflow-y-auto;
     word-wrap: normal;
-    
+
     /* long code snippets */
-    
+
     &::-webkit-scrollbar {
       height: 6px;
     }
-    
+
     &::-webkit-scrollbar-track-piece {
       @extend .bg-black-10;
       border-bottom-left-radius: .15rem;
       border-bottom-right-radius: .15rem;
     }
-    
+
     &::-webkit-scrollbar-thumb {
       @extend .bg-black-20;
       border-bottom-left-radius: .15rem;
