--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,25 +5,23 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tom Black{%if page.title %} — {{ page.title }}{% endif %}</title>
-    
-    <link href="https://fonts.googleapis.com/css?family=Lusitana:400,700" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="apple-touch-icon-precomposed" href="/assets/img/favicon-152.png">
   </head>
-  
+
   <body class="{{ page.css }} mw7 pa3 center sans-serif mb5">
     {{ content }}
   </body>
-  
+
   <!-- Google Analytics -->
   <script>
     (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
     (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
     m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
     })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-    
+
     ga('create', 'UA-31822241-1', 'auto');
     ga('send', 'pageview');
-    
   </script>
 </html>
