--- a/_sass/syntax-highlighting.scss
+++ b/_sass/syntax-highlighting.scss
@@ -1,66 +1,153 @@
 /**
  * Syntax highlighting styles
  */
+
+// Tomorrow Night Blue — https://github.com/mozmorris/tomorrow-pygments
 .highlight {
-  background: #fff;
-  
-  .c     { color: #998; font-style: italic } // Comment
-  .err   { color: #a61717; background-color: #e3d2d2 } // Error
-  .k     { font-weight: bold } // Keyword
-  .o     { font-weight: bold } // Operator
-  .cm    { color: #998; font-style: italic } // Comment.Multiline
-  .cp    { color: #999; font-weight: bold } // Comment.Preproc
-  .c1    { color: #998; font-style: italic } // Comment.Single
-  .cs    { color: #999; font-weight: bold; font-style: italic } // Comment.Special
-  .gd    { color: #000; background-color: #fdd } // Generic.Deleted
-  .gd .x { color: #000; background-color: #faa } // Generic.Deleted.Specific
-  .ge    { font-style: italic } // Generic.Emph
-  .gr    { color: #a00 } // Generic.Error
-  .gh    { color: #999 } // Generic.Heading
-  .gi    { color: #000; background-color: #dfd } // Generic.Inserted
-  .gi .x { color: #000; background-color: #afa } // Generic.Inserted.Specific
-  .go    { color: #888 } // Generic.Output
-  .gp    { color: #555 } // Generic.Prompt
-  .gs    { font-weight: bold } // Generic.Strong
-  .gu    { color: #aaa } // Generic.Subheading
-  .gt    { color: #a00 } // Generic.Traceback
-  .kc    { font-weight: bold } // Keyword.Constant
-  .kd    { font-weight: bold } // Keyword.Declaration
-  .kp    { font-weight: bold } // Keyword.Pseudo
-  .kr    { font-weight: bold } // Keyword.Reserved
-  .kt    { color: #458; font-weight: bold } // Keyword.Type
-  .m     { color: #099 } // Literal.Number
-  .s     { color: #d14 } // Literal.String
-  .na    { color: #008080 } // Name.Attribute
-  .nb    { color: #0086B3 } // Name.Builtin
-  .nc    { color: #458; font-weight: bold } // Name.Class
-  .no    { color: #008080 } // Name.Constant
-  .ni    { color: #800080 } // Name.Entity
-  .ne    { color: #900; font-weight: bold } // Name.Exception
-  .nf    { color: #900; font-weight: bold } // Name.Function
-  .nn    { color: #555 } // Name.Namespace
-  .nt    { color: #000080 } // Name.Tag
-  .nv    { color: #008080 } // Name.Variable
-  .ow    { font-weight: bold } // Operator.Word
-  .w     { color: #bbb } // Text.Whitespace
-  .mf    { color: #099 } // Literal.Number.Float
-  .mh    { color: #099 } // Literal.Number.Hex
-  .mi    { color: #099 } // Literal.Number.Integer
-  .mo    { color: #099 } // Literal.Number.Oct
-  .sb    { color: #d14 } // Literal.String.Backtick
-  .sc    { color: #d14 } // Literal.String.Char
-  .sd    { color: #d14 } // Literal.String.Doc
-  .s2    { color: #d14 } // Literal.String.Double
-  .se    { color: #d14 } // Literal.String.Escape
-  .sh    { color: #d14 } // Literal.String.Heredoc
-  .si    { color: #d14 } // Literal.String.Interpol
-  .sx    { color: #d14 } // Literal.String.Other
-  .sr    { color: #009926 } // Literal.String.Regex
-  .s1    { color: #d14 } // Literal.String.Single
-  .ss    { color: #990073 } // Literal.String.Symbol
-  .bp    { color: #999 } // Name.Builtin.Pseudo
-  .vc    { color: #008080 } // Name.Variable.Class
-  .vg    { color: #008080 } // Name.Variable.Global
-  .vi    { color: #008080 } // Name.Variable.Instance
-  .il    { color: #099 } // Literal.Number.Integer.Long
+  background: #002451; color: #ffffff;
+  .hll { background-color: #003f8e }
+  .c { color: #7285b7 } /* Comment */
+  .err { color: #ff9da4 } /* Error */
+  .k { color: #ebbbff } /* Keyword */
+  .l { color: #ffc58f } /* Literal */
+  .n { color: #ffffff } /* Name */
+  .o { color: #99ffff } /* Operator */
+  .p { color: #ffffff } /* Punctuation */
+  .cm { color: #7285b7 } /* Comment.Multiline */
+  .cp { color: #7285b7 } /* Comment.Preproc */
+  .c1 { color: #7285b7 } /* Comment.Single */
+  .cs { color: #7285b7 } /* Comment.Special */
+  .gd { color: #ff9da4 } /* Generic.Deleted */
+  .ge { font-style: italic } /* Generic.Emph */
+  .gh { color: #ffffff; font-weight: bold } /* Generic.Heading */
+  .gi { color: #d1f1a9 } /* Generic.Inserted */
+  .gp { color: #7285b7; font-weight: bold } /* Generic.Prompt */
+  .gs { font-weight: bold } /* Generic.Strong */
+  .gu { color: #99ffff; font-weight: bold } /* Generic.Subheading */
+  .kc { color: #ebbbff } /* Keyword.Constant */
+  .kd { color: #ebbbff } /* Keyword.Declaration */
+  .kn { color: #99ffff } /* Keyword.Namespace */
+  .kp { color: #ebbbff } /* Keyword.Pseudo */
+  .kr { color: #ebbbff } /* Keyword.Reserved */
+  .kt { color: #ffeead } /* Keyword.Type */
+  .ld { color: #d1f1a9 } /* Literal.Date */
+  .m { color: #ffc58f } /* Literal.Number */
+  .s { color: #d1f1a9 } /* Literal.String */
+  .na { color: #bbdaff } /* Name.Attribute */
+  .nb { color: #ffffff } /* Name.Builtin */
+  .nc { color: #ffeead } /* Name.Class */
+  .no { color: #ff9da4 } /* Name.Constant */
+  .nd { color: #99ffff } /* Name.Decorator */
+  .ni { color: #ffffff } /* Name.Entity */
+  .ne { color: #ff9da4 } /* Name.Exception */
+  .nf { color: #bbdaff } /* Name.Function */
+  .nl { color: #ffffff } /* Name.Label */
+  .nn { color: #ffeead } /* Name.Namespace */
+  .nx { color: #bbdaff } /* Name.Other */
+  .py { color: #ffffff } /* Name.Property */
+  .nt { color: #99ffff } /* Name.Tag */
+  .nv { color: #ff9da4 } /* Name.Variable */
+  .ow { color: #99ffff } /* Operator.Word */
+  .w { color: #ffffff } /* Text.Whitespace */
+  .mf { color: #ffc58f } /* Literal.Number.Float */
+  .mh { color: #ffc58f } /* Literal.Number.Hex */
+  .mi { color: #ffc58f } /* Literal.Number.Integer */
+  .mo { color: #ffc58f } /* Literal.Number.Oct */
+  .sb { color: #d1f1a9 } /* Literal.String.Backtick */
+  .sc { color: #ffffff } /* Literal.String.Char */
+  .sd { color: #7285b7 } /* Literal.String.Doc */
+  .s2 { color: #d1f1a9 } /* Literal.String.Double */
+  .se { color: #ffc58f } /* Literal.String.Escape */
+  .sh { color: #d1f1a9 } /* Literal.String.Heredoc */
+  .si { color: #ffc58f } /* Literal.String.Interpol */
+  .sx { color: #d1f1a9 } /* Literal.String.Other */
+  .sr { color: #d1f1a9 } /* Literal.String.Regex */
+  .s1 { color: #d1f1a9 } /* Literal.String.Single */
+  .ss { color: #d1f1a9 } /* Literal.String.Symbol */
+  .bp { color: #ffffff } /* Name.Builtin.Pseudo */
+  .vc { color: #ff9da4 } /* Name.Variable.Class */
+  .vg { color: #ff9da4 } /* Name.Variable.Global */
+  .vi { color: #ff9da4 } /* Name.Variable.Instance */
+  .il { color: #ffc58f } /* Literal.Number.Integer.Long */
 }
+
+// // Dracula — https://draculatheme.com/pygments
+// .highlight {
+//   background: #282a36; color: #f8f8f2;
+//   .hll { background-color: #f1fa8c }
+//   .c { color: #6272a4 } /* Comment */
+//   .err { color: #f8f8f2 } /* Error */
+//   .g { color: #f8f8f2 } /* Generic */
+//   .k { color: #ff79c6 } /* Keyword */
+//   .l { color: #f8f8f2 } /* Literal */
+//   .n { color: #f8f8f2 } /* Name */
+//   .o { color: #ff79c6 } /* Operator */
+//   .x { color: #f8f8f2 } /* Other */
+//   .p { color: #f8f8f2 } /* Punctuation */
+//   .ch { color: #6272a4 } /* Comment.Hashbang */
+//   .cm { color: #6272a4 } /* Comment.Multiline */
+//   .cp { color: #ff79c6 } /* Comment.Preproc */
+//   .cpf { color: #6272a4 } /* Comment.PreprocFile */
+//   .c1 { color: #6272a4 } /* Comment.Single */
+//   .cs { color: #6272a4 } /* Comment.Special */
+//   .gd { color: #8b080b } /* Generic.Deleted */
+//   .ge { color: #f8f8f2; text-decoration: underline } /* Generic.Emph */
+//   .gr { color: #f8f8f2 } /* Generic.Error */
+//   .gh { color: #f8f8f2; font-weight: bold } /* Generic.Heading */
+//   .gi { color: #f8f8f2; font-weight: bold } /* Generic.Inserted */
+//   .go { color: #44475a } /* Generic.Output */
+//   .gp { color: #f8f8f2 } /* Generic.Prompt */
+//   .gs { color: #f8f8f2 } /* Generic.Strong */
+//   .gu { color: #f8f8f2; font-weight: bold } /* Generic.Subheading */
+//   .gt { color: #f8f8f2 } /* Generic.Traceback */
+//   .kc { color: #ff79c6 } /* Keyword.Constant */
+//   .kd { color: #8be9fd; font-style: italic } /* Keyword.Declaration */
+//   .kn { color: #ff79c6 } /* Keyword.Namespace */
+//   .kp { color: #ff79c6 } /* Keyword.Pseudo */
+//   .kr { color: #ff79c6 } /* Keyword.Reserved */
+//   .kt { color: #8be9fd } /* Keyword.Type */
+//   .ld { color: #f8f8f2 } /* Literal.Date */
+//   .m { color: #bd93f9 } /* Literal.Number */
+//   .s { color: #f1fa8c } /* Literal.String */
+//   .na { color: #50fa7b } /* Name.Attribute */
+//   .nb { color: #8be9fd; font-style: italic } /* Name.Builtin */
+//   .nc { color: #50fa7b } /* Name.Class */
+//   .no { color: #f8f8f2 } /* Name.Constant */
+//   .nd { color: #f8f8f2 } /* Name.Decorator */
+//   .ni { color: #f8f8f2 } /* Name.Entity */
+//   .ne { color: #f8f8f2 } /* Name.Exception */
+//   .nf { color: #50fa7b } /* Name.Function */
+//   .nl { color: #8be9fd; font-style: italic } /* Name.Label */
+//   .nn { color: #f8f8f2 } /* Name.Namespace */
+//   .nx { color: #f8f8f2 } /* Name.Other */
+//   .py { color: #f8f8f2 } /* Name.Property */
+//   .nt { color: #ff79c6 } /* Name.Tag */
+//   .nv { color: #8be9fd; font-style: italic } /* Name.Variable */
+//   .ow { color: #ff79c6 } /* Operator.Word */
+//   .w { color: #f8f8f2 } /* Text.Whitespace */
+//   .mb { color: #bd93f9 } /* Literal.Number.Bin */
+//   .mf { color: #bd93f9 } /* Literal.Number.Float */
+//   .mh { color: #bd93f9 } /* Literal.Number.Hex */
+//   .mi { color: #bd93f9 } /* Literal.Number.Integer */
+//   .mo { color: #bd93f9 } /* Literal.Number.Oct */
+//   .sa { color: #f1fa8c } /* Literal.String.Affix */
+//   .sb { color: #f1fa8c } /* Literal.String.Backtick */
+//   .sc { color: #f1fa8c } /* Literal.String.Char */
+//   .dl { color: #f1fa8c } /* Literal.String.Delimiter */
+//   .sd { color: #f1fa8c } /* Literal.String.Doc */
+//   .s2 { color: #f1fa8c } /* Literal.String.Double */
+//   .se { color: #f1fa8c } /* Literal.String.Escape */
+//   .sh { color: #f1fa8c } /* Literal.String.Heredoc */
+//   .si { color: #f1fa8c } /* Literal.String.Interpol */
+//   .sx { color: #f1fa8c } /* Literal.String.Other */
+//   .sr { color: #f1fa8c } /* Literal.String.Regex */
+//   .s1 { color: #f1fa8c } /* Literal.String.Single */
+//   .ss { color: #f1fa8c } /* Literal.String.Symbol */
+//   .bp { color: #f8f8f2; font-style: italic } /* Name.Builtin.Pseudo */
+//   .fm { color: #50fa7b } /* Name.Function.Magic */
+//   .vc { color: #8be9fd; font-style: italic } /* Name.Variable.Class */
+//   .vg { color: #8be9fd; font-style: italic } /* Name.Variable.Global */
+//   .vi { color: #8be9fd; font-style: italic } /* Name.Variable.Instance */
+//   .vm { color: #8be9fd; font-style: italic } /* Name.Variable.Magic */
+//   .il { color: #bd93f9 } /* Literal.Number.Integer.Long */
+// }
