Syntax highlighting fix

--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -92,6 +92,7 @@ pre {
     @extend .pa2, .lh-copy, .db, .overflow-y-auto;
     word-wrap: normal;
     background: #1e2832;
+    color: #fff;
 
     /* long code snippets */
 
