--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tom Black{% unless page.title == 'none' %} — {{ page.title }}{% endunless %}</title>
+    <title>Tom Black{% unless page.title == 'home' %} — {{ page.title }}{% endunless %}</title>
     <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="apple-touch-icon-precomposed" href="/assets/img/favicon-152.png">
