Add game dev blog

--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -5,12 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Tom Black{% unless page.title == 'home' %} — {{ page.title }}{% endunless %}</title>
-    <link href="https://fonts.googleapis.com/css?family=Source+Code+Pro" rel="stylesheet">
     <link rel="stylesheet" href="/assets/css/main.css">
     <link rel="apple-touch-icon-precomposed" href="/assets/img/favicon-152.png">
   </head>
 
-  <body class="{{ page.style }} pa3 center sans-serif mb4">
+  <body class="{{ page.style }} mw7 pa3 center sans-serif mb4">
     {{ content }}
   </body>
 
