--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -27,10 +27,6 @@ hr {
   margin-top: 3rem;
 }
 
-.article {
-  @extend .mw7;
-}
-
 .home {
   .section-header {
     @extend .f3, .bb, .bw2, .pb2, .mb3;
@@ -88,7 +84,7 @@ article {
 code {
   @extend .pb0, .ba, .bw1, .b--black-10, .br2;
   padding: 0 4px;
-  font-family: 'Source Code Pro', monospace;
+  font-family: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
   word-wrap: break-word;
   background: rgb(250, 250, 250);
 }
