--- a/_includes/post-meta.html
+++ b/_includes/post-meta.html
@@ -8,5 +8,5 @@
       <span class="post-label"><a href="{{ site.baseurl }}{{ site.posts_path }}/categories/#{{ category }}">{{ category }}</a></span>
     {% endfor %}
     </span>
-  {% endif %}
+  {% endif %} — Tom Black
 </div>
