--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -5,7 +5,7 @@ layout: main
 {% if page.categories contains 'game dev' %}
   <a href="/blog/game-dev" class="back">← game dev blog</a>
 {% else %}
-  <a href="/blog" class="back">← blog</a>
+  <a href="/" class="back">← home</a>
 {% endif %}
 
 <div class="content">
