--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -3,8 +3,14 @@
 
 @import "tachyons", "syntax-highlighting";
 
+// Elements ////////////////////////////////////////////////////////////////////
+
 body {
-  @extend .black-80;
+  @extend .mb6, .sans-serif, .near-black;
+}
+
+nav {
+  @extend .pa2, .bb, .b--white-10, .bg-near-black, .tc-ns, .tl;
 }
 
 h1 { @extend .f2; }
@@ -15,16 +21,12 @@ p, li {
   @extend .f4, .f5-ns;
   line-height: 1.5;
 }
-a { @extend .blue; }
+a { @extend .near-black; }
 
 hr {
   @extend .bg-black-10;
   border: none;
   height: 3px;
-}
-
-.mt3r {
-  margin-top: 3rem;
 }
 
 blockquote {
@@ -35,14 +37,27 @@ blockquote {
   }
 }
 
+// Common Classes //////////////////////////////////////////////////////////////
+
+.mt3r {
+  margin-top: 3rem;
+}
+
+// Sections ////////////////////////////////////////////////////////////////////
+
 .home {
-  .avatar {
-    padding: 0.1rem;
-    box-shadow: 0 0 0 3px rgba(0, 0, 0, 0.12);
+  h1 {
+    @extend .f2, .fw9;
   }
 
   .section-header {
-    @extend .f3, .bb, .bw2, .pb2, .mb3;
+    @extend .f3, .fw9, .bb, .bw2, .b--near-black, .mt3r, .mb3;
+
+    span {
+      @extend .relative, .bg-near-black, .white;
+      top: 1px;
+      padding: 0 4px;
+    }
   }
 
   .items {
@@ -50,9 +65,18 @@ blockquote {
       @extend .mt0, .mb1;
       font-size: 1.15rem;
 
-      a { @extend .f4, .link; }
+      a {
+        @extend .f4, .link;
+        &:hover { text-decoration: underline; }
+      }
     }
-    p { @extend .mt0; }
+    p { @extend .mt0 }
+  }
+
+  .projects>* {
+    flex: 0 0 49%;
+    margin: 0.5%;
+    p { @extend .mt0, .mb1-ns, .mb3; }
   }
 }
 
@@ -76,6 +100,52 @@ blockquote {
   }
 }
 
+.resume {
+  h1 {
+    @extend .f2, .bb, .bw2, .b--near-black;
+  }
+
+  h2 {
+    @extend .mt4, .mb0;
+  }
+
+  .contact {
+    @extend .tc;
+
+    h1 {
+      @extend .mb2, .f4, .bn;
+    }
+
+    p {
+      @extend .mt0;
+    }
+  }
+
+  .jump-to {
+    @extend .ml-auto, .mr-auto, .mw6, .tc;
+  }
+
+  .job-details {
+    @extend .lh-copy, .b;
+  }
+
+  .projects {
+    @extend .pl3, .bl, .bw2, .b--black-20;
+
+    .project {
+      @extend .lh-copy, .b;
+
+      .title {
+        @extend .mt3, .f4;
+      }
+
+      & + p {
+        @extend .mt2;
+      }
+    }
+  }
+}
+
 .slides {
   @extend .mw9;
 }
@@ -88,7 +158,7 @@ article {
 
 .post-date-icon {
   @extend .relative;
-  top: 2px;
+  top: 5px;
   margin-right: 2px
 }
 
